Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69255

Qmake generates an invalid Makefile

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.11.2
    • 5.11.1
    • Build System
    • None
    • Android / Windows 10 MSVC15
    • Windows
    • da4dcc0893fce3555b35d931801f94f472593742

      I'm compiling Android on Windows and when pro file has someting like:

      android {
          CONFIG(debug, debug|release) {
              DESTDIR = $$shadowed($$PWD)/../../build/debug
          }
      }
      

      then Makefiile would look like this:

      ..\..\build\debug\$(TARGET): $(OBJECTS) $(SUBLIBS) $(OBJCOMP)
          @if not exist ..\..\build\debug\ mkdir ..\..\build\debug\ & if not exist ..\..\build\debug\ exit 1
          -$(DEL_FILE) $(TARGET)
          $(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(LIBS) $(OBJCOMP)
          -$(MOVE) $(TARGET) ..\..\build\debug\
      

      However the move command is invalid. The trailing backslash won't work.

      It should be $(MOVE) $(TARGET) ..\..\build\debug 

      In 5.9.3 that was able to manually fix in Makefile after every build, but that won't work anymore in 5.11.1, but I had to update, as in 5.9.3 Android debugging won't work.

        For Gerrit Dashboard: QTBUG-69255
        # Subject Branch Project Status CR V

            qtbuildsystem Qt Build System Team
            mmertama Markus Mertama
            Votes:
            1 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes